[package]
name = "leaflet-rounds"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "leaflet_rounds"

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
askama = "0.12.1"
env_logger = "0.10.1"
lexopt = "0.3.0"


[dev-dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1.32.0", features = ["macros"] }
scraper = "0.17.1"
fantoccini = "0.19.3"
serde_json = "1.0.113"
